2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (do_info_index_search, info_virtual_index): Remove
	check against min_search_length.
	* info/session.c (info_search_1): Don't allocate for search_string
	here.
	(info_search_next, info_search_previous): Check if search_string is
	null.

2014-08-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_virtual_index): Place index marker tag in
	generated node.

2014-08-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (info_read_in_echo_area)
	(info_read_completing_internal, info_read_completing_in_echo_area)
	(info_read_maybe_completing)
	(info_read_completing_in_echo_area_with_exclusions): WINDOW argument
	removed.  All uses updated.

	* info/session.c (ask_for_search_string): WINDOW argument removed.

2014-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_1): Argument removed.  Don't call
	ask_for_search_string.
	(info_search_case_sensitively, info_search, info_search_backward): Do
	it here instead.
	(ask_for_search_string): Don't display "[]" in prompt if no previous
	search string.  Check if search string is too long here instead of in
	info_search_1.

2014-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Use same call to
	info_search_internal for both regex and non-regex searches.

	* info/t/inc-sea-forward-nonregex.sh: New test.

2014-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Remove unused argument.  When
	searching backward again, position one byte before current match.
	(info_search_internal, info_search_in_node_internal): Always start
	search at argument given, not at point.  Callers updated.

	* info/t/inc-sea-forward.sh: New test.
	* info/t/search.info: Remove spaces between two matches and more
	matches after target to increase chance of ending up in the wrong
	place.

2014-08-16  Gavin Smith  <gavinsmith0123@gmail.com>
